# obs-pokemon-sv-helper

./: .gitignore  .gitmodules  CMakeLists.txt  buildspec.json
.github/workflows/: main.yml
cmake/bundle/windows/: installer-Windows.iss.in
src/: plugin-main.c
